--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="main">
         <h1>Legal Tech</h1>
-        <image scr="https://www.cbinsights.com/research/artificial-intelligence-emerging-industries">
+        <image src="https://www.cbinsights.com/research/artificial-intelligence-emerging-industries">
       </div>
     </div>
   </body>
