--- a/index.html
+++ b/index.html
@@ -31,4 +31,20 @@
     </div>
   </div>
 </body>
+	  <footer class="container">
+    <div class="row">
+      <p class="col-sm-4">codebrainery.io</p>
+        <ul class="col-sm-8 text-right">
+          <li class="col-sm-1"> 
+          <img scr="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook-grey.svg">
+          </li> 
+         <li class="col-sm-1"> 
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter-grey.svg">
+          </li>
+          <li class="col-sm-1"> 
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram-grey.svg">
+          </li>
+      </ul>
+    </div>
+    </footer>
 </html>
