--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Flynn's Page</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:700,300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
 <body>
   <div class="container">
