--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="nav">
   <h2>Flynn</h2>
   <ul>
-    <li>Home</li>
+    <li class="pill-black"> Home</li>
     <li>News</li>
     <li>Projects</li>
     <li>Blog</li>
