--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     
     <div class="row">
-           <h1 class="col-sm-8"> Codebrainery.io </h1>
+           <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8"> 
             <p class="pill-white"> Home </p>
             <p class="pill-black"> About </p>
