--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="row">
            <h1 class="col-sm-8"> Flynn </h1>
-          <nav class="col-sm-8"> 
+          <nav class="col-sm-8 test-right"> 
             <p class="pill-white"> Home </p>
             <p class="pill-black"> About </p>
 	    <p class="pill-white"> News </p>
