--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row">
            <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8 test-right"> 
-            <p class="col-sm-1 pill-white"> Home </p>
+		  <p class="col-sm-1"> <font color="white" Home </font> </p>
             <p class="pill-black"> About </p>
 	    <p class="pill-white"> News </p>
             <p class="pill-black"> Project </p>
