--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
            <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8 test-right"> 
 		  <p class="col-sm-1"> <font color="white"> Home </font> </p>
+		  <p class="col-sm-1"> <font color="white"> About </font> </p>
+		  <p class="col-sm-1"> <font color="white"> News </font> </p>
+		  <p class="col-sm-1"> <font color="white"> Project </font> </p>
             <p class="pill-black"> About </p>
 	    <p class="pill-white"> News </p>
             <p class="pill-black"> Project </p>
