--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		  <p class="col-sm-1"> <font color="white"> Home </font> </p>
 		  <p class="col-sm-1"> <font color="white"> About </font> </p>
 		  <p class="col-sm-1"> <font color="white"> News </font> </p>
-		  <p class="col-sm-1"> <font color="white"> Project </font> </p>
-            <p class="pill-black"> About </p>
-	    <p class="pill-white"> News </p>
-            <p class="pill-black"> Project </p>
+		  <p class="col-sm-1"> <font color="white"> Projects </font> </p>
+		  <p class="col-sm-1"> <font color="white"> Contact </font> </p>
           </nav>
 	    </div>
 	    
