--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="row">
            <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8 test-right"> 
-		  <p class="col-sm-1"> <font color="white"> Home </font> </p>
-		  <p class="col-sm-1"> <font color="white"> About </font> </p>
-		  <p class="col-sm-1"> <font color="white"> News </font> </p>
-		  <p class="col-sm-1"> <font color="white"> Projects </font> </p>
-		  <p class="col-sm-1"> <font color="white"> Contact </font> </p>
+		  <p class="col-sm-1"> <font color="black"> Home </font> </p>
+		  <p class="col-sm-1"> <font color="black"> About </font> </p>
+		  <p class="col-sm-1"> <font color="black"> News </font> </p>
+		  <p class="col-sm-1"> <font color="black"> Projects </font> </p>
+		  <p class="col-sm-1"> <font color="black"> Contact </font> </p>
           </nav>
 	    </div>
 	    
