--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row">
            <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8 test-right"> 
-		  <p class="col-sm-1"> <font color="black"> Home </font> </p>
+		  <p class="pill-black"> <font color="white"> Home </font> </p>
 		  <p class="col-sm-1"> <font color="black"> About </font> </p>
 		  <p class="col-sm-1"> <font color="black"> News </font> </p>
 		  <p class="col-sm-1"> <font color="black"> Projects </font> </p>
