--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
            <h1 class="col-sm-8"> Flynn </h1>
           <nav class="col-sm-8 test-right"> 
 		  <p class="pill-black"> <font color="white"> Home </font> </p>
-		  <p class="col-sm-1"> <font color="black"> About </font> </p>
-		  <p class="col-sm-1"> <font color="black"> News </font> </p>
-		  <p class="col-sm-1"> <font color="black"> Projects </font> </p>
-		  <p class="col-sm-1"> <font color="black"> Contact </font> </p>
+		   <p class="pill-black"> <font color="white"> About </font> </p>
+		   <p class="pill-black"> <font color="white"> News </font> </p>
+		   <p class="pill-black"> <font color="white"> Projects </font> </p>
+		   <p class="pill-black"> <font color="white"> Contact </font> </p>
           </nav>
 	    </div>
 	    
