--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </body>
 	  <footer class="container">
     <div class="row">
-      <p class="col-sm-4">Social Media</p>
+      <p class="col-sm-4">&copy Flynn O'Connell</p>
         <ul class="col-sm-8 text-right">
           <li class="col-sm-1"> 
           <img scr="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook-grey.svg">
