--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		   <p class="pill-black"> <font color="white"> Contact </font> </p>
           </nav>
 	    </div>
-	    
+	</div>
     <div class="main">
   <h1>My GitHub project</h1>
   <h3>Legal Tech</h3>
