--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="col-sm-8"> Flynn </h1>
-    <div class="row">
-           
-          <nav class="col-sm-8 test-right"> 
-		  <p class="pill-black"> <font color="white"> Home </font> </p>
-		   <p class="pill-black"> <font color="white"> About </font> </p>
-		   <p class="pill-black"> <font color="white"> News </font> </p>
-		   <p class="pill-black"> <font color="white"> Projects </font> </p>
-		   <p class="pill-black"> <font color="white"> Contact </font> </p>
+     <div class="row">
+    <h1 class="col-sm-4">Skillfair</h1>
+    <nav class="col-sm-8 text-right">
+      <p>newest</p>
+      <p>catalogue</p>
+      <p>contact</p
           </nav>
 	    </div>
 	</div>
