--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:700,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
-<body>
-  <div class="container">
-     <div class="row">
+	<header class="container">
+  <div class="row">
+    
     <h1 class="col-sm-4">Skillfair</h1>
     <nav class="col-sm-8 text-right">
       <p>newest</p>
       <p>catalogue</p>
-      <p>contact</p
-          </nav>
-	    </div>
-	</div>
+      <p>contact</p>
+    </nav>
+  </div>
+        </header>
+<body>
+  
     <div class="main">
   <h1>My GitHub project</h1>
   <h3>Legal Tech</h3>
