--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flynn's Page</title>
+  <title>Skillfair</title>
   <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:700,300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
-	<header class="container">
+<body>
+<header class="container">
   <div class="row">
     
     <h1 class="col-sm-4">Skillfair</h1>
@@ -18,6 +19,16 @@
     </nav>
   </div>
         </header>
+<section class="jumbotron">
+  <div class="container">
+    <div class="row text-center">
+      <h2>Homemade Goods</h2>
+      <h3>This Year's Best</h3>
+      <a class="btn btn-primary" 
+         href="#" role="button">See all</a>
+    </div>
+  </div>
+  </section>
 <body>
   
     <div class="main">
