--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Skillfair</title>
+  <title>Flynn's Project</title>
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
@@ -11,30 +11,27 @@
 <header class="container">
   <div class="row">
     
-    <h1 class="col-sm-4">Skillfair</h1>
+    <h1 class="col-sm-4">Flynn</h1>
     <nav class="col-sm-8 text-right">
-      <p>newest</p>
-      <p>catalogue</p>
-      <p>contact</p>
+      <p>Home</p>
+      <p>About</p>
+      <p>Contact</p>
     </nav>
   </div>
         </header>
 <section class="jumbotron">
   <div class="container">
     <div class="row text-center">
-      <h2>Homemade Goods</h2>
-      <h3>This Year's Best</h3>
+      <h2>My HTML and CSS Test Site</h2>
+      <h3>March 2019</h3>
       <a class="btn btn-primary" 
-         href="#" role="button">See all</a>
+         href="#" role="button">See More</a>
     </div>
   </div>
   </section>
 <body>
   
     <div class="main">
-  <h1>My GitHub project</h1>
-  <h3>Legal Tech</h3>
-        <image src="#"/>
   <p>...<a href="cities.html">link</a> ...</p>
   <video width="320" height="240" controls>
     <source src="..." type="video/mp4">
