--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="row">
     <h1 class="col-sm-4">Flynn</h1>
     <nav class="col-sm-8 text-right">
-      <p>Home</p>
-      <p>About</p>
-      <p>Contact</p>
+      <p href="#" role="button"> Home</p>
+      <p href="#" role="button"> About</p>
+      <p href="#" role="button"> Contact</p>
     </nav>
   </div>
         </header>
