--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p class="col-sm-4">&copy Flynn O'Connell</p>
         <ul class="col-sm-8 text-right">
           <li class="col-sm-1"> 
-          <img scr="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook-grey.svg">
+          <img scr="https://image.freepik.com/free-icon/facebook-logo-with-rounded-corners_318-9850.jpg">
           </li> 
          <li class="col-sm-1"> 
           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter-grey.svg">
