--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
   </div>
   </section>
 <body>
-  
     <div class="main">
   <p>...<a href="cities.html">link</a> ...</p>
   <video width="320" height="240" controls>
@@ -37,6 +36,21 @@
   </video>
     </div>
   </div>
+   <section class="container">
+    <div class="row">
+      <figure class="col-sm-6">
+        <p>kitchen</p>
+        <img  src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg"/>
+      </figure>
+      <figure class="col-sm-6">
+        <p>woodwork</p>
+        <img  src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/woodwork.jpg"/>
+      </figure>
+    </div>
+    <div class=row>
+      ...
+    </div>
+  </section>
 <footer class="container">
     <div class="row">
       <p class="col-sm-4">&copy Flynn O'Connell</p>
