--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
   </section>
 <body>
     <div class="main">
-  <p>...<a href="cities.html">link</a> ...</p>
+  <p>...<a href="link.html">link</a> ...</p>
   <video width="320" height="240" controls>
-    <source src="..." type="video/mp4">
+    <source src="#" type="video/mp4">
   </video>
     </div>
   </div>
    <section class="container">
     <div class="row">
-      <figure class="col-sm-6">
-        <p>kitchen</p>
-        <img  src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg"/>
-      </figure>
+      <video width="320" height="240" controls class="col-sm-6">
+        <p>video</p>
+        <source src="#" type="video/mp4">
+      </video>
       <figure class="col-sm-6">
         <p>woodwork</p>
         <img  src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/woodwork.jpg"/>
