--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <p>video</p>
         <source src="#" type="video/mp4">
       </video>
-      <figure class="col-sm-6">
-        <p>woodwork</p>
-        <img  src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/woodwork.jpg"/>
-      </figure>
+      <video width="320" height="240" controls class="col-sm-6">
+        <p>video</p>
+        <source src="#" type="video/mp4">
+      </video>
     </div>
     <div class=row>
       ...
