--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </section>
 <footer class="container">
     <div class="row">
-      <p class="col-sm-4">&copy Flynn O'Connell</p>
+      <p class="col-sm-4">&copy Flynn O'Connell 2019</p>
         <ul class="col-sm-8 text-right">
           <li class="col-sm-1"> 
           <img scr="https://image.freepik.com/free-icon/facebook-logo-with-rounded-corners_318-9850.jpg">
