--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       <p class="col-sm-4">&copy Flynn O'Connell 2019</p>
         <ul class="col-sm-8 text-right">
           <li class="col-sm-1"> 
-          <img href="https://www.facebook.com" src="https://image.freepik.com/free-icon/facebook-logo-with-rounded-corners_318-9850.jpg">
+            <a href="https://www.facebook.com">
+          <img src="https://image.freepik.com/free-icon/facebook-logo-with-rounded-corners_318-9850.jpg">
+            </a>
           </li> 
          <li class="col-sm-1"> 
           <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter-grey.svg">
