--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <div class="row">
       <video width="320" height="240" controls class="col-sm-6">
         <p>video</p>
-        <source src="#" type="video/mp4">
+        <source src="https://www.youtube.com/watch?v=pVT_fpz-6KM" type="video/mp4">
       </video>
       <video width="320" height="240" controls class="col-sm-6">
         <p>video</p>
-        <source src="#" type="video/mp4">
+        <source src="https://www.youtube.com/watch?v=xz4-aEGvqQM" type="video/mp4">
       </video>
     </div>
     <div class=row>
