--- a/about.html
+++ b/about.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Flynn's Project - About</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+<header class="container">
+  <div class="row">
+    <h1 class="col-sm-4">About</h1>
+    <nav class="col-sm-8 text-right">
+      <p class="btn btn-primary" href="#" role="button"> Home</p>
+      <p class="btn btn-primary" href="#" role="button"> About</p>
+      <p class="btn btn-primary" href="#" role="button"> Contact</p>
+    </nav>
+  </div>
+        </header>
+<section class="jumbotron">
+  <div class="container">
+    <div class="row text-center">
+    ...
+    </div>
+  </div>
+  </section>
+<body>
+   <section class="container">
+    <div class="row">
+    ...
+    </div>
+    <div class=row>
+      <p>...<a href="link.html">link</a> ...</p>
+    </div>
+  </section>
+<footer class="container">
+    <div class="row">
+      <p class="col-sm-4">&copy Flynn O'Connell 2019</p>
+        <ul class="col-sm-8 text-right">
+          <li class="col-sm-1"> 
+            <a href="https://www.facebook.com">
+          <img src="https://image.freepik.com/free-icon/facebook-logo-with-rounded-corners_318-9850.jpg">
+            </a>
+          </li> 
+         <li class="col-sm-1"> 
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter-grey.svg">
+          </li>
+          <li class="col-sm-1"> 
+          <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram-grey.svg">
+          </li>
+      </ul>
+    </div>
+    </footer>
+</body>
+</html>
