--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="col-sm-4">Flynn</h1>
     <nav class="col-sm-8 text-right">
       <p class="btn btn-primary" href="#" role="button"> Home</p>
-      <p class="btn btn-primary" href="#" role="button"> About</p>
+      <p class="btn btn-primary" href="https://flynn60806.github.io/Law/about.html" role="button"> About</p>
       <p class="btn btn-primary" href="#" role="button"> Contact</p>
     </nav>
   </div>
