--- a/about.html
+++ b/about.html
@@ -21,7 +21,10 @@
 <section class="jumbotron">
   <div class="container">
     <div class="row text-center">
-    ...
+    <h2>Information on this project</h2>
+      <h3>This GitHub website is a sandpit for me to practice using HTML and CSS</h3>
+      <a class="btn btn-primary" 
+         href="#" role="button">See More</a>
     </div>
   </div>
   </section>
