--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <div class="row">
     <h1 class="col-sm-4">About</h1>
     <nav class="col-sm-8 text-right">
-      <p class="btn btn-primary" href="https://flynn60806.github.io/Law/index.html" role="button"> Home</p>
+      <p class="btn btn-primary" <a href="https://flynn60806.github.io/Law/index.html" role="button"> </a> Home</p>
       <p class="btn btn-primary" href="https://flynn60806.github.io/Law/about.html" role="button"> About</p>
       <p class="btn btn-primary" href="#" role="button"> Contact</p>
     </nav>
